--- a/package.json
+++ b/package.json
@@ -6,15 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve-json": "json-server --watch pages/api/data/home/welcome-section.json --port 4000"
   },
   "dependencies": {
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.9.3",
+    "embla-carousel-react": "^7.0.5",
+    "fs": "^0.0.1-security",
+    "fs.promises": "^0.1.2",
+    "gray-matter": "^4.0.3",
+    "json-server": "^0.17.1",
+    "marked": "^4.0.18",
+    "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "react-spring": "^9.2.4",
+    "react-use": "^17.2.4",
+    "sass": "^1.37.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "^11.1.3-canary.7",
+    "next": "^11.1.3-canary.7"
   }
 }
